--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-.navbar, a {
-    margin-bottom: 0px;
-  
-}
-
 .jumbotron {
     display: flex;
     background-image: url(../images/Untitled\ \(4\).png);
@@ -12,7 +7,10 @@
     align-items: center;
 }
 
-.jumbotron h1, p {
-    text-align: center;
+
+.quote {
+    position: relative;
+    align-self: end;
+    justify-self: start;
 }
 
