--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 .jumbotron {
     display: flex;
-    background-image: url(../images/Untitled\ \(11\).png);
+    background-image: url(../images/Untitled\ \(14\).png);
+    width: 100% ;
     height: 100vh;
     background-size: cover;
-    color: antiquewhite;
+    color: #5F093D;
     align-items: center;
+    background-position: center bottom
 }
 
 .button-hover:hover {
