fixed header color

--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,13 @@
     background-color: #5F093D;
 }
 
+.textmid-red {
+    color: #5F093D;
+}
+
+
 .hot-pink {
-    background-color: #ff69b486;
+    background-color: #ff69b4;
 }
 
 .bright-red {
